# VulnRisk_Public

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE  CONTRIBUTING.md  DEVELOPER_SETUP.md  LICENSE  SECURITY.md  TRADEMARK_NOTICE  docker-compose.yml  readme.md  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend.yml
backend/: .dockerignore  .flake8  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/src/tests/: test_api.py  test_risk_calculator.py
backend/src/vulnrisk/: __init__.py  cli.py
backend/src/vulnrisk/api/: api_keys.py  fedramp.py  main.py  performance_scalability.py  security_compliance.py
backend/src/vulnrisk/auth/: auth0_jwt.py
backend/src/vulnrisk/compliance/: compliance_framework.py
backend/src/vulnrisk/config/: feature_flags.py
backend/src/vulnrisk/core/: risk_calculator.py  risk_calculator.py.backup
backend/src/vulnrisk/data_sources/: epss.py  nvd.py
backend/src/vulnrisk/frameworks/: fedramp_rfc0012.py  fedramp_vdr_standard.py
backend/src/vulnrisk/models/: analytics.py  api_keys.py  audit.py  batch.py  database.py
backend/src/vulnrisk/performance/: performance_optimizer.py
backend/src/vulnrisk/scalability/: auto_scaling.py
backend/src/vulnrisk/security/: advanced_security.py
backend/src/vulnrisk/services/: ai_analytics.py  analytics.py  api_key_manager.py  batch_processor.py  enhanced_ai_analytics.py  fedramp_timeline.py  incident_response.py  scanner_integrations.py
backend/src/vulnrisk/utils/: feature_guards.py
docs/: PACKAGING_MIGRATION.md
frontend/: Dockerfile  Makefile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AnalyticsDashboard.tsx  AuthCallback.tsx  FileUpload.tsx  FrameworkSelector.tsx  Navigation.tsx  ResultsTable.tsx  RiskCalculator.tsx
frontend/src/components/ui/: alert.tsx  asset-criticality-guide.tsx  button.tsx  card.tsx  (+10 more)
frontend/src/config/: api.ts  brand.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: about.tsx  ai-insights.tsx  analytics.tsx  api-key-management.tsx  batch.tsx  fedramp-compliance.tsx  holistic-dashboard.tsx  index.tsx  risk-assessment.tsx  scanner-integrations.tsx
frontend/src/utils/: featureFlags.ts
