[tool.poetry]
name = "vulnrisk-backend"
version = "0.1.0"
description = "VulnRisk - Contextual Vulnerability Risk Scoring Platform Backend"
authors = ["GurkhaShieldForce"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
httpx = "^0.27.0"
pydantic = "^2.6.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
pandas = "^2.0.0"
celery = "^5.3.6"
websockets = "^12.0"
redis = "^5.0.3"
matplotlib = "^3.8.0"
reportlab = "^4.0.0"
openpyxl = "^3.1.0"
scikit-learn = "^1.4.0"
numpy = "^1.24.0"
joblib = "^1.3.0"
python-jose = "^3.4.0"
cryptography = "^43.0.1"
aiohttp = "^3.12.14"
python-multipart = "^0.0.18"
xgboost = "^1.7.0"
optuna = "^3.0.0"
plotly = "^5.10.0"
requests = "^2.32.0"

[[tool.poetry.packages]]
include = "vulnrisk"
from = "src"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
black = "^24.4.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 