[project]
name = "vulnrisk-backend"
version = "0.1.0"
description = "VulnRisk - Contextual Vulnerability Risk Scoring Platform Backend"
requires-python = ">=3.13,<4.0"
license = { text = "MIT" }
authors = [{ name = "GurkhaShieldForce" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.4.0",
    "cryptography>=43.0.1",
    "click>=8.1.7",
    "aiohttp>=3.12.14",
    "requests>=2.32.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.4.0",
    "xgboost>=1.7.0",
    "optuna>=3.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
nlp = ["spacy>=3.7.0", "transformers>=4.40.0"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "black>=24.4.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulnrisk"]
